[package]
name = "bfc"
version = "1.8.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
homepage = "https://github.com/Wilfred/bfc"
repository = "https://github.com/Wilfred/bfc"
description = "An industrial-grade brainfuck compiler"
readme = "README.md"
license = "GPL-2.0"
edition = "2018"

[dependencies]
itertools = "*"
tempfile = "*"
getopts = "*"
matches = "*"
ansi_term = "*"
structopt = "*"

[dev-dependencies]
quickcheck = "*"
pretty_assertions = "*"
